Reverted AmbientSound to build off of MovingSoundInstance to get back smoother transitions.

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.4.8+build.159
 
 # Mod Properties
-	mod_version = 1.1.0
-	maven_group = dev.sanctuario
+	mod_version = 1.1.2
+	maven_group = dev.hephaestus
 	archives_base_name = atmosfera
 
 # Dependencies
