--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ minecraft {
 }
 
 dependencies {
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
+
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
