--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.5
-	loader_version=0.4.8+build.159
+minecraft_version   = 1.15.2
+yarn_mappings       = 1.15.2+build.14
+loader_version      = 0.7.8+build.187
 
 # Mod Properties
-	mod_version = 1.1.3
-	maven_group = dev.hephaestus
-	archives_base_name = atmosfera
-
+mod_version         = 0.0.1
+maven_group         = dev.hephaestus
+archives_base_name  = experienta
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.3.0+build.207
+fabric_api_version  = 0.5.1+build.294-1.15
