Fixed the gradle.properties file

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,9 @@ yarn_mappings       = 1.15.2+build.14
 loader_version      = 0.7.8+build.187
 
 # Mod Properties
-mod_version         = 0.0.1
+mod_version         = 1.1.5
 maven_group         = dev.hephaestus
-archives_base_name  = experienta
+archives_base_name  = atmosfera
+
 # Dependencies
 fabric_api_version  = 0.5.1+build.294-1.15
