--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '0.2.5-SNAPSHOT'
+	id 'fabric-loom' version '0.2.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -18,9 +18,15 @@ dependencies {
 
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
+	modApi "me.shedaniel.cloth:config-2:${project.cloth_config_2_version}"
+	modApi "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+	include "me.shedaniel.cloth:config-2:${project.cloth_config_2_version}"
+	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
+	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
 }
 
 processResources {
