--- a/gradle.properties
+++ b/gradle.properties
@@ -2,14 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version   = 1.15.2
-yarn_mappings       = 1.15.2+build.14
-loader_version      = 0.7.8+build.187
+minecraft_version       = 1.15.2
+yarn_mappings           = 1.15.2+build.14
+loader_version          = 0.7.8+build.184
 
 # Mod Properties
-mod_version         = 1.1.5
-maven_group         = dev.hephaestus
-archives_base_name  = atmosfera
+mod_version             = 1.1.5
+maven_group             = dev.hephaestus
+archives_base_name      = atmosfera
 
 # Dependencies
-fabric_api_version  = 0.5.1+build.294-1.15
+fabric_api_version      = 0.4.32+build.292-1.15
+mod_menu_version        = 1.10.2+build.32
+cloth_config_2_version  = 2.11.2
+auto_config_version     = 1.2.4
