--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,14 @@ dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 
-	modApi "me.shedaniel.cloth:config-2:${project.cloth_config_2_version}"
-	modApi "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
-	include "me.shedaniel.cloth:config-2:${project.cloth_config_2_version}"
-	include "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+	modApi "me.shedaniel.cloth:config-2:${cloth_config_version}"
+	modApi "me.sargunvohra.mcmods:autoconfig1u:${autoconfig1u}"
+	include "me.shedaniel.cloth:config-2:${cloth_config_version}"
+	include "me.sargunvohra.mcmods:autoconfig1u:${autoconfig1u}"
 
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
-	modImplementation "io.github.prospector:modmenu:${project.mod_menu_version}"
+	modImplementation "net.fabricmc:fabric-loader:${loader_version}"
+	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api}"
+	modImplementation "io.github.prospector:modmenu:${modmenu_version}"
 }
 
 processResources {
