--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version       = 1.15.2
-yarn_mappings           = 1.15.2+build.14
-loader_version          = 0.7.8+build.184
+minecraft_version       = 20w16a
+yarn_mappings           = 20w16a+build.9
+loader_version          = 0.8.2+build.194
 
 # Mod Properties
-mod_version             = 1.2.0
+mod_version             = 1.2.0-1.16
 maven_group             = dev.hephaestus
 archives_base_name      = atmosfera
 
 # Dependencies
-fabric_api_version      = 0.4.32+build.292-1.15
-mod_menu_version        = 1.10.2+build.32
-cloth_config_2_version  = 2.11.2
-auto_config_version     = 1.2.4
+fabric_api=0.5.11+build.322-1.16
+modmenu_version=1.11.0+build.2
+cloth_config_version=3.3.2-unstable
+autoconfig1u=2.0.1
