Updated version number

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ yarn_mappings           = 20w16a+build.9
 loader_version          = 0.8.2+build.194
 
 # Mod Properties
-mod_version             = 1.2.0-1.16
+mod_version             = 1.2.1
 maven_group             = dev.hephaestus
 archives_base_name      = atmosfera
 
