--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version       = 20w16a
-yarn_mappings           = 20w16a+build.9
-loader_version          = 0.8.2+build.194
+minecraft_version       = 1.16-rc1
+yarn_mappings           = 1.16-rc1+build.8
+loader_version          = 0.8.8+build.202
 
 # Mod Properties
-mod_version             = 1.2.1
+mod_version             = 1.2.2
 maven_group             = dev.hephaestus
 archives_base_name      = atmosfera
 
 # Dependencies
-fabric_api=0.5.11+build.322-1.16
-modmenu_version=1.11.0+build.2
-cloth_config_version=3.3.2-unstable
+fabric_api=0.12.5+build.367-1.16
+modmenu_version=1.12.1+build.15
+cloth_config_version=4.5.5
