--- a/gradle.properties
+++ b/gradle.properties
@@ -2,16 +2,16 @@
 org.gradle.jvmargs  = -Xmx3G
 
 # Fabric Properties
-minecraft_version   = 1.16.3
-yarn_mappings       = 1.16.3+build.11
-loader_version      = 0.9.3+build.207
+minecraft_version   = 1.16.4
+yarn_mappings       = 1.16.4+build.7
+loader_version      = 0.10.8
 
 # Mod Properties
-mod_version         = 1.3.5
+mod_version         = 1.4.0
 maven_group         = dev.hephaestus
 archives_base_name  = atmosfera
 
 # Dependencies
-fabric_version      = 0.21.0+build.407-1.16
+fabric_version      = 0.25.1+build.416-1.16
 modmenu_version     = 1.14.6+build.31
 cloth_version       = 4.8.1
