--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.11-SNAPSHOT'
     id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -18,14 +18,13 @@ repositories {
     }
     maven {
         name = 'ModMenu'
-        url = 'https://maven.kotlindiscord.com/repository/terraformers/'
+        url = 'https://maven.terraformersmc.com/releases/'
     }
     maven {
         name = 'ClothConfig'
         url = 'https://maven.shedaniel.me/'
     }
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
